--- a/main.html
+++ b/main.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draggable Images</title>
+    <title>Better Instagram</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div id="div1" class="draggable" draggable="true"></div>
-        <div id="div2" class="draggable" draggable="true"></div>
-        <div id="div3" class="draggable" draggable="true"></div>
-        <div id="div4" class="draggable" draggable="true"></div>
-        <div id="div5" class="draggable" draggable="true"></div>
-        <div id="div6" class="draggable" draggable="true"></div>
+    <div class="grid">
+        <div id="div1" class="draggable"></div>
+        <div id="div2" class="draggable"></div>
+        <div id="div3" class="draggable"></div>
+        <div id="div4" class="draggable"></div>
+        <div id="div5" class="draggable"></div>
+        <div id="div6" class="draggable"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
