--- a/main.html
+++ b/main.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Better Instagram</title>
+    <title>Drag and Drop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="grid">
-        <div id="div1" class="draggable"></div>
-        <div id="div2" class="draggable"></div>
-        <div id="div3" class="draggable"></div>
-        <div id="div4" class="draggable"></div>
-        <div id="div5" class="draggable"></div>
-        <div id="div6" class="draggable"></div>
+        <div id="drag1" class="draggable"></div>
+        <div id="drag2" class="draggable"></div>
+        <div id="drag3" class="draggable"></div>
+        <div id="drag4" class="draggable"></div>
+        <div id="drag5" class="draggable"></div>
+        <div id="drag6" class="draggable"></div>
     </div>
     <script src="script.js"></script>
 </body>
