--- a/main.html
+++ b/main.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop</title>
+    <title>Draggable Images</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="grid">
-        <div id="drag1" class="draggable"></div>
-        <div id="drag2" class="draggable"></div>
-        <div id="drag3" class="draggable"></div>
-        <div id="drag4" class="draggable"></div>
-        <div id="drag5" class="draggable"></div>
-        <div id="drag6" class="draggable"></div>
+    <div class="container">
+        <div id="drag1" class="draggable" draggable="true"></div>
+        <div id="drag2" class="draggable" draggable="true"></div>
+        <div id="drag3" class="draggable" draggable="true"></div>
+        <div id="drag4" class="draggable" draggable="true"></div>
+        <div id="drag5" class="draggable" draggable="true"></div>
+        <div id="drag6" class="draggable" draggable="true"></div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
