--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div id="drag1" class="draggable" draggable="true"></div>
-        <div id="drag2" class="draggable" draggable="true"></div>
-        <div id="drag3" class="draggable" draggable="true"></div>
-        <div id="drag4" class="draggable" draggable="true"></div>
-        <div id="drag5" class="draggable" draggable="true"></div>
-        <div id="drag6" class="draggable" draggable="true"></div>
+        <div id="div1" class="draggable" draggable="true"></div>
+        <div id="div2" class="draggable" draggable="true"></div>
+        <div id="div3" class="draggable" draggable="true"></div>
+        <div id="div4" class="draggable" draggable="true"></div>
+        <div id="div5" class="draggable" draggable="true"></div>
+        <div id="div6" class="draggable" draggable="true"></div>
     </div>
 
     <script src="script.js"></script>
